2009-12-21  Nate Chapin  <japhet@chromium.org>

        Unreviewed, build fix.

        Cleared instead of deleted some layout test files, making them fail. Delete them for real.

        * http/tests/navigation/image-load-in-beforeunload-handler-expected.txt: Removed.
        * http/tests/navigation/image-load-in-beforeunload-handler.html: Removed.
        * http/tests/navigation/image-load-in-unload-handler-expected.txt: Removed.
        * http/tests/navigation/image-load-in-unload-handler.html: Removed.
        * http/tests/navigation/resources/wait-then-notify-done.html: Removed.

2009-12-21  Nate Chapin  <japhet@chromium.org>

        Rubber-stamped by Darin Adler.

        Revert r52446 due to crashiness.

        https://bugs.webkit.org/show_bug.cgi?id=32839

        * http/tests/navigation/image-load-in-beforeunload-handler-expected.txt:
        * http/tests/navigation/image-load-in-beforeunload-handler.html:
        * http/tests/navigation/image-load-in-unload-handler-expected.txt:
        * http/tests/navigation/image-load-in-unload-handler.html:
        * http/tests/navigation/resources/wait-then-notify-done.html:

2009-12-21  Dirk Schulze  <krit@webkit.org>

        Reviewed by Darin Adler and Nikolas Zimmermann.

        Speed-up SVG Masking
        https://bugs.webkit.org/show_bug.cgi?id=32738

        Update pixel test results for two SVG masking operations. They don't fail
        and there is no noticable difference between the old and new results. But
        Masking uses smaller ImageBuffers now and that changed the checksum.

        * platform/mac/svg/W3C-SVG-1.1/masking-intro-01-f-expected.checksum:
        * platform/mac/svg/W3C-SVG-1.1/masking-intro-01-f-expected.png:
        * platform/mac/svg/batik/masking/maskRegions-expected.checksum:
        * platform/mac/svg/batik/masking/maskRegions-expected.png:

2009-12-21  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Darin Adler.
