@@ -1,0 +1,9 @@
+
+
+
+--------
+Frame: 'DUPA'
+--------
+Inner text should not be replaced.
+
+
