@@ -1,0 +1,37 @@
+<html>
+<head>
+<script>
+if (window.layoutTestController) {
+  layoutTestController.dumpAsText();
+  layoutTestController.dumpChildFramesAsText();
+}
+
+function runTest() {
+  var a = window.frames[0];
+// java\0script is invalid url.
+
+  a.location.href = " javascript:document.write('FAIL')";
+  a.location.href = "javascript\t:document.write('FAIL')";
+  a.location.href = "javascript\1:document.write('FAIL')";
+  a.location.href = "javascript:document.write('FAIL')";
+
+
+  a.location.replace(" javascript:document.write('FAIL')");
+  a.location.replace("javascript\t:document.write('FAIL')");
+  a.location.replace("javascript\1:document.write('FAIL')");
+  a.location.replace("javascript:document.write('FAIL')");
+
+  a.location = " javascript:document.write('FAIL')";
+  a.location = "javascript\t:document.write('FAIL')";
+  a.location = "javascript\1:document.write('FAIL')";
+  a.location = "javascript:document.write('FAIL')";
+}
+</script>
+
+</head>
+<body onload="runTest()">
+<br>
+<iframe id = 'DUPA' src="data:text/html,<p>Inner text should not be replaced.<p>"></iframe>
+
+</body>
+</html>
